Add comprehensive test suite with Jest framework
- Set up Jest testing environment for Chrome extension
- Add Chrome API mocks and test configuration
- Create tests for Utils, Actions, and KeyHandler modules
- Add comprehensive tests for matchLocation function covering blacklist URL matching fix
- Add real-world blacklist scenario tests verifying basyura.org remains active
- All 40 tests passing, providing robust test coverage for core functionality

--- a/package.json
+++ b/package.json
@@ -7,8 +7,17 @@
     "url": "https://github.com/1995eaton/chromium-vim"
   },
   "private": true,
+  "scripts": {
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
+  },
   "devDependencies": {
+    "@types/chrome": "^0.1.1",
+    "@types/jest": "^30.0.0",
     "highlight.js": "latest",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "markdown-it": "latest",
     "pegjs": "latest"
   }
