--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "format": "prettier --write \"**/*.{js,json,css,html,md}\""
   },
   "devDependencies": {
     "@types/chrome": "^0.1.1",
@@ -19,6 +20,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "markdown-it": "latest",
-    "pegjs": "latest"
+    "pegjs": "latest",
+    "prettier": "^3.3.3"
   }
 }
